--- a/src/styles.css
+++ b/src/styles.css
@@ -5,11 +5,12 @@
 }
 
 body {
-  background-color: rgba(183, 164, 164, 0.986);
+   background-color: lightgrey;
 }
 
 .list-container {
   background-color: #fff;
+  padding-top: 30px;
   width: 45%;
   height: auto;
   position: absolute;
@@ -22,16 +23,12 @@ body {
   align-items: center;
 }
 
-.bi-journal-text {
-  font-size: 5rem;
-  color: rgb(29, 125, 185);
-  margin: 15px auto;
-}
-
 #list-heading {
-  font-size: 1.9rem;
+  filter: blur(0.5px);
+  margin-right: 50%;
+  font-size: 1.2rem;
   color: rgba(74, 71, 71, 0.747);
-  font-weight: 900;
+  font-weight: 600;
   margin-bottom: 10px;
 }
 
@@ -44,15 +41,18 @@ body {
 }
 
 #todo-form {
-  width: 90%;
+  width: 95%;
 }
 
 #input-list {
+  filter: blur(0.7px);
+  font-style: italic;
+  color: gray;
   width: 100%;
   height: 30px;
   margin-bottom: 20px;
   border: none;
-  border-bottom: 2px solid gray;
+  border-bottom: 1px solid gray;
 }
 
 #input-list::placeholder {
@@ -63,13 +63,14 @@ body {
 ul li {
   position: relative;
   list-style: none;
-  width: 90%;
+  width: 95%;
   font-size: 15px;
   height: 38px;
   display: flex;
   align-items: baseline;
   border-bottom: 1px solid gray;
   margin-top: 10px;
+  filter: blur(0.9px);
 }
 
 .checkbox {
@@ -110,14 +111,17 @@ ul li {
   width: 80%;
   padding: 12px;
   margin: 15px auto;
-  background-color: rgb(186, 185, 185);
+  color: gray;
   font-size: 20px;
+  font-style: italic;
   border: none;
   border-radius: 4px;
   cursor: pointer;
+  filter: blur(0.6px);
 }
 
 span {
+  filter: blur(0.2px);
   margin-left: 15px;
-  font-size: 20px;
+  font-size: 17px;
 }
